<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com
    Derived from Google IO Schedule App, Copyright 2010 Google, Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
        > -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.72" >

    <RelativeLayout
        android:id="@+id/progress"
        style="@android:style/TextAppearance.Theme.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignLeft="@+id/news"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/settings"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/alarmprogress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:maxWidth="300dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/progressmessage"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text=""
            android:textColor="@color/title_text_alt"
            android:textSize="20dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/food"
        style="@style/HomeButton"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"
        android:drawableTop="@drawable/food"
        android:onClick="onClickFood"
        android:text="@string/food"
        android:visibility="visible" />

    <Button
        android:id="@+id/news"
        style="@style/HomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/food"
        android:layout_below="@+id/food"
        android:layout_marginTop="10dp"
        android:drawableTop="@drawable/news"
        android:onClick="onClickNews"
        android:text="@string/news"
        android:visibility="visible" />

    <Button
        android:id="@+id/video"
        style="@style/HomeButton"
        android:layout_width="wrap_content"
        android:layout_alignBaseline="@+id/food"
        android:layout_alignBottom="@+id/food"
        android:layout_alignParentRight="true"
        android:layout_marginRight="17dp"
        android:drawableTop="@drawable/video"
        android:onClick="onClickVideo"
        android:text="@string/video"
        android:visibility="visible" />

    <Button
        android:id="@+id/settings"
        style="@style/HomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/news"
        android:layout_alignBottom="@+id/news"
        android:layout_alignLeft="@+id/video"
        android:drawableTop="@drawable/settings"
        android:onClick="onClickSettings"
        android:text="@string/settings"
        android:visibility="visible" />

    <Button
        android:id="@+id/hshare"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/news"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/settings"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:onClick="shareapp"
        android:text="@string/share" />

</RelativeLayout>
