<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >
    
   <ListView
        android:id="@+id/ilist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="2dp"
        android:layout_marginTop="5dp"
        android:divider="#ffffff"
        android:dividerHeight="2dp"
        android:visibility="visible" >

    </ListView>
 <RelativeLayout
     android:id="@+id/idisplay"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/list"
     android:layout_alignParentRight="true"
     android:layout_alignParentTop="true"
     android:background="@drawable/border"
     android:paddingBottom="2dp" >

     <TextView
         android:id="@+id/ititle"
         style="@style/TitleText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_margin="2dp"
         android:layout_marginTop="5dp"
         android:gravity="center|left"
         android:text="@string/title"
         android:textColor="@color/title_text_alt"
         android:textSize="14dp"
         android:visibility="visible" />

     <TextView
         android:id="@+id/imaterialtext"
         style="@style/TextBody"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/ititle"
         android:layout_margin="2dp"
         android:text="@string/materialtext"
         android:textColor="@color/title_text_alt"
         android:textSize="12dp"
         android:visibility="visible" />

     <TextView
         android:id="@+id/isource"
         style="@style/TextBody"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/imaterialtext"
         android:layout_below="@+id/imaterialtext"
         android:layout_margin="2dp"
         android:text="Source :"
         android:textColor="@color/title_text_alt"
         android:textSize="10dp"
         android:visibility="visible" />

     <Button
         android:id="@+id/ishare"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/isource"
         android:layout_below="@+id/isource"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/button"
         android:onClick="sharelink"
         android:text="@string/share" />

     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/ishare"
         android:layout_below="@+id/ishare"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textSize="2dp" />

     <Button
         android:id="@+id/iview"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/imaterialtext"
         android:layout_alignTop="@+id/ishare"
         android:layout_marginRight="15dp"
         android:background="@drawable/button"
         android:onClick="viewarticle"
         android:text="View"
         android:visibility="visible" />

 </RelativeLayout>

</RelativeLayout>